--- a/www/i18n/zh_TW.json
+++ b/www/i18n/zh_TW.json
@@ -1,5 +1,5 @@
 {
-    "TITLE": "政大借書籃",
+    "TITLE": "全民樂單字",
     
     "BOOK_LIST": "借書清單",
 
@@ -32,7 +32,7 @@
     
     "EXIT_APP": "離開程式",
     
-    "ONS_TITLE": "政大借書籃",
+    "ONS_TITLE": "全民樂單字",
     "ONS_OK": "確定",
     "ONS_YES": "確定",
     "ONS_NO": "取消",
