--- a/www/i18n/zh_TW.json
+++ b/www/i18n/zh_TW.json
@@ -1,26 +1,19 @@
 {
     "TITLE": "全民樂單字",
     
-    "BOOK_LIST": "借書清單",
-
-    "TODO_LIST": "借書清單",
-    "CLEAR_TODO_LIST": "您確定要清空借書清單嗎？",
-    "SCAN_BARCODE": "掃描條碼",
-    "SEARCH": "搜尋",
-    "SEARCH_PLACEHOLDER": "輸入ISBN查詢...",
-    "HAS_TIEM_ALERT": "已經有資料了。",
-    "NOT_FOUND": "找不到這本書",
-    "NOT_AVAILABLE": "沒有可流通的資料",
-    
-    "COMPLETED_LIST": "歷史清單",
-    "CLEAR_COMPLETED_LIST": "確定要清空歷史記錄嗎？",
+    "TEST_SELECT_TITLE": "測驗",
+    "TEST_SELECT_OPTIONS_HEADING": "請選擇答案：",
+    "TEST_SELECT_HINT_BUTTON": "查看筆記",
+    "TEST_SELECT_ANSWER_CORRECT": "答對了！",
+    "TEST_SELECT_ANSWER_INCORRECT": "答錯了！",
+    "TEST_SELECT_GO_TO_LEARN": "回到單字學習",
+    "TEST_SELECT_NEXT": "下一個測驗",
     
     "SETTING": "設定",
-    "CLEAR_ALL_LIST": "清空所有列表",
-    "CLEAR_ALL_LIST_CONFIRM": "確定要清空所有清單嗎？",
+    
     "SUGGESTION": "提出建議",
     "SHARE_APP": "分享這個APP",
-    "SHARE_APP_TEXT": "我正在使用政大借書籃，也推薦你來用用看喔。下載網址 https://play.google.com/store/apps/details?id=pulipuli.blogspot.tw.nccu_book_cart",
+    "SHARE_APP_TEXT": "我正在使用全民樂單字，也推薦你來用用看喔。下載網址 https://play.google.com/store/apps/details?id=pulipuli.blogspot.tw.nccu_book_cart",
     
     "ABOUT": "關於作者",
     "AUTHOR_PHONE": "布丁的照片",
