1128 嗯，接下來來玩同步 close #44 最後整理learn_flashcard_transition.html 跟 test_select_transition.html #37 分離CSS 做到一半，但先這樣吧

--- a/www/i18n/zh_TW.json
+++ b/www/i18n/zh_TW.json
@@ -1,6 +1,13 @@
 {
     "TITLE": "全民樂單字",
     
+    "LEARN_FLASHCARD_TITLE": "單字學習",
+    "LEARN_FLASHCARD_NOTE_EMPTY": "您還沒有撰寫筆記",
+    "LEARN_FLASHCARD_OTHER_NOTE": "其他人的筆記:",
+    "LEARN_FLASHCARD_GO_PREV": "上一個單字",
+    "LEARN_FLASHCARD_GO_TEST": "進入測驗",
+    "LEARN_FLASHCARD_GO_NEXT": "下一個單字",
+    
     "TEST_SELECT_TITLE": "測驗",
     "TEST_SELECT_OPTIONS_HEADING": "請選擇答案：",
     "TEST_SELECT_HINT_BUTTON": "查看筆記",
