1128 先處理按鈕 把所有按鈕換成ons-icon icon close #59

--- a/www/i18n/zh_TW.json
+++ b/www/i18n/zh_TW.json
@@ -1,6 +1,9 @@
 {
     "TITLE": "全民樂單字",
     
+    "TARGET_MENU_TITLE": "目標檢視",
+    "TARGET_MENU_STATUS": "進度完成",
+    
     "LEARN_FLASHCARD_TITLE": "單字學習",
     "LEARN_FLASHCARD_NOTE_EMPTY": "您還沒有撰寫筆記",
     "LEARN_FLASHCARD_OTHER_NOTE": "其他人的筆記:",
