--- a/www/i18n/zh_TW.json
+++ b/www/i18n/zh_TW.json
@@ -25,8 +25,11 @@
     "ABOUT": "關於作者",
     "AUTHOR_PHONE": "布丁的照片",
     "AUTHOR_NAME": "布丁布丁吃布丁",
+    "AUTHOR_NAME2": "午安你好我是順",
     "AUTHOR_ID": "Tim (Puudding)",
-    "AUTHOR_DESC": "國立政治大學圖書資訊與檔案學研究所博士生，興趣是用程式來讓生活與工作更加便利，但是也應該寫寫論文才能夠順利畢業。",
+    "AUTHOR_ID2": "Paul (Shun)",
+    "AUTHOR_DESC": "國立政治大學圖書資訊與檔案學研究所博士生，興趣是用程式來讓生活與工作更加便利，但是也應該寫寫論文才能夠順利畢業。",   
+    "AUTHOR_DESC2": "國立政治大學圖書資訊與檔案學研究所碩士生，開發APP的菜鳥[Lv 1]，距離等級練滿還有好長一段路。但是不練滿無法畢業啊！",
     "VISIT_BLOG": "參觀我的部落格",
     "DONATE": "助我畢業",
     
