1204 menu在icon寬度時，保留setting的icon #89

--- a/www/i18n/zh_TW.json
+++ b/www/i18n/zh_TW.json
@@ -3,7 +3,7 @@
     
     "TARGET_MENU_TITLE": "目標檢視",
     "TARGET_MENU_STATUS": "進度完成",
-    "TARGET_MENU_IMCOMPLETE": "進度完成",
+    "TARGET_MENU_IMCOMPLETE": "已完成",
     "TARGET_MENU_YESTERDAY_TARGET_STATUS": "昨天進度",
     
     "LEARN_FLASHCARD_TITLE": "單字學習",
