--- a/www/i18n/zh_TW.json
+++ b/www/i18n/zh_TW.json
@@ -30,8 +30,11 @@
     "ABOUT": "關於作者",
     "AUTHOR_PHONE": "布丁的照片",
     "AUTHOR_NAME": "布丁布丁吃布丁",
+    "AUTHOR_NAME2": "楊舜閔",
     "AUTHOR_ID": "Tim (Puudding)",
+    "AUTHOR_ID2": "Shun",
     "AUTHOR_DESC": "國立政治大學圖書資訊與檔案學研究所博士生，興趣是用程式來讓生活與工作更加便利，但是也應該寫寫論文才能夠順利畢業。",
+    "AUTHOR_DESC2": "國立政治大學圖書資訊與檔案學研究所碩士生，興趣是玩桌遊與猜謎，目前正在解一個名為畢業的謎。",
     "VISIT_BLOG": "參觀我的部落格",
     "DONATE": "助我畢業",
     
